--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,9 +6,9 @@ pylama >= 7.0.9
 pylama-pylint >= 2.2.1
 
 # To run Python notebooks
-jupyter==1.0.0
-scikit-learn==0.17.1
-pandas==0.18.1
-matplotlib==1.5.1
-jupyter==1.0.0
-scipy==0.18.0
+jupyter>=1.0.0
+scikit-learn>=0.17.1
+pandas>=0.18.1
+matplotlib>=1.5.1
+jupyter>=1.0.0
+scipy>=0.18.0
