--- a/pylama.ini
+++ b/pylama.ini
@@ -1,3 +1,3 @@
 [pylama]
-linters = mccabe,pyflakes,pep8,pylint,pep257
+linters = pylint,pep257,pyflakes,isort,mccabe,pep8
 ignore = D203,D100,C0111
