--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
 # Atom editor
-pylint >= 1.6.4
 
 # CLI linter
 pylama >= 7.0.9
 pylama-pylint >= 2.2.1
+pylint == 1.5.4
 
 # To run Python notebooks
 jupyter>=1.0.0
