--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,14 +1,11 @@
-# Atom editor
+# Linters
+pylama==7.1.0
+pylama-pylint==2.2.1
+pylint==1.5.4
 
-# CLI linter
-pylama >= 7.0.9
-pylama-pylint >= 2.2.1
-pylint == 1.5.4
-
-# To run Python notebooks
-jupyter>=1.0.0
-scikit-learn>=0.17.1
-pandas>=0.18.1
-matplotlib>=1.5.1
-jupyter>=1.0.0
-scipy>=0.18.0
+# To run Jupyter notebooks
+jupyter==1.0.0
+scikit-learn==0.17.1
+pandas==0.18.1
+matplotlib==1.5.3
+scipy==0.18.0
